fix for handling control-backspace on Windows (submitted by bernie5412@hotmail.com (Bernie McGuire)); bug 105122; r=yokoyama, brade, sr=roc+moz